--- a/src/Example/packages.config
+++ b/src/Example/packages.config
@@ -5,8 +5,8 @@
   <package id="NUnit.Engine.Api" version="3.11.1" targetFramework="net45" />
   <package id="NUnit3TestAdapter" version="3.16.1" targetFramework="net45" developmentDependency="true" />
   <package id="ReportPortal.Client" version="3.0.0-beta.3" targetFramework="net45" />
-  <package id="ReportPortal.Extensions.SourceBack" version="2.0.0-alpha.5" targetFramework="net45" />
-  <package id="ReportPortal.Log4Net" version="2.0.0-alpha.1" targetFramework="net45" />
+  <package id="ReportPortal.Extensions.SourceBack" version="2.0.0-beta.3" targetFramework="net45" />
+  <package id="ReportPortal.Log4Net" version="2.0.0-beta.2" targetFramework="net45" />
   <package id="ReportPortal.NUnit" version="4.0.0-beta.3" targetFramework="net45" />
   <package id="ReportPortal.Shared" version="3.0.0-beta.3" targetFramework="net45" />
   <package id="System.Collections.Immutable" version="1.7.0" targetFramework="net45" />
